[gd_scene load_steps=9 format=2]

[ext_resource path="res://Icons_For_Characters/Adalard.jpg" type="Texture" id=1]
[ext_resource path="res://Game/Characters/Dialoge_Field.gd" type="Script" id=2]
[ext_resource path="res://CtDnPXDocFwukJcuP8LpYC0crxbOApt_7RXkyjakJmieWOCz1Pjuw138Qrs_pM08jn0XEpqHzSQB0y4HuiMgfonN.jpg" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[node name="Dialoge_Field" type="TouchScreenButton"]
material = SubResource( 4 )
position = Vector2( 252, 441 )
scale = Vector2( 3, 3 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
material = SubResource( 5 )
anchor_left = 0.433
anchor_top = -1.556
anchor_right = 0.541
anchor_bottom = -1.192
margin_left = -162.373
margin_top = -86.316
margin_right = 393.079
margin_bottom = 268.488
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource( 1 )
margin_left = 31.0
margin_top = 3.0
margin_right = 404.0
margin_bottom = 88.0
rect_scale = Vector2( 0.4, 0.4 )
text = "ulyfilnilnguo;go;go;;'"

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 15.3776, 15.8889 )
scale = Vector2( 0.0895394, 0.190059 )
texture = ExtResource( 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
material = SubResource( 3 )
margin_left = 1.28375
margin_top = 31.7778
margin_right = 72.2838
margin_bottom = 49.7778
rect_scale = Vector2( 0.4, 0.4 )
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="." to="." method="_on_Dialoge_Field_pressed"]
[connection signal="released" from="." to="." method="_on_Dialoge_Field_released"]
